Fix front page quick links on small screens
Refs pombase/website#1979

--- a/src/app/front/front.component.css
+++ b/src/app/front/front.component.css
@@ -81,6 +81,7 @@
   .quick-links {
     float: right;
     width: 48%;
+    padding-top: 0.3em;
   }
 }
 
@@ -92,12 +93,25 @@
 
 .quick-links-group {
   display: block;
-  margin: 0em 1em 0.5em 1em;
+}
+
+@media (max-width: 1100px) {
+  .quick-links-group-visible-title {
+    display: block;
+  }
+  .quick-links-group-hidden-title {
+    display: none;
+  }
+
 }
 
 @media (min-width: 1100px) {
   .quick-links-group {
     white-space: nowrap;
+    margin: 0em 1em 0.5em 1em;
+  }
+  .quick-links-group-hidden-title {
+    visibility: hidden;
   }
 }
 
